--- a/SHORT-URL/views/home.ejs
+++ b/SHORT-URL/views/home.ejs
@@ -12,6 +12,9 @@
 </head>
 <body>
    <h1>URL Shortner</h1>
+   <% if (locals.id) {%>
+      <p>URL genrated: http://localhost:8001/<%=id%></p>
+  <% } %>
    <div>
     <form method="POST" action="/url">
         <label for="">enter your original url</label>
@@ -20,6 +23,28 @@
           placeholder="example.com">
           <button type = "submit">Genrate</button>
     </form>
+   </div>
+   <div>
+      <% if(locals.urls){  %>
+         <table>
+            <thead>
+             <th>S.no</th>   
+             <th>ShortId</th>   
+             <th>Redirect</th>   
+             <th>Clicks</th>   
+            </thead>
+            <tbody>
+               <% urls.forEach((url,index) => { %>
+                        <tr>
+                     <td><%= index +1 %></td>
+                     <td><%= url.shortId %></td>
+                     <td><%= url.redirectURL %></td>
+                     <td><%= url.visitHistory.length %></td>
+                  </tr>
+               <% }) %>
+            </tbody>
+         </table>
+         <% } %>
    </div>
 </body>
 </html>
