--- a/SHORT-URL/views/login.ejs
+++ b/SHORT-URL/views/login.ejs
@@ -13,7 +13,7 @@
 </head>
 <body>
     <h1>LOGIN</h1>
-    <form action="/" method="post">
+    <form action="/user/login" method="post">
         <label for="">Email</label>
         <input type="text" required name = "email"/>
         <label for="">Password</label>
